--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,11 @@ cryptography==3.3.1
 Django==3.1.6
 django-rest-knox==4.1.0
 djangorestframework==3.12.2
+gunicorn==20.0.4
+Pillow==8.1.0
+psycopg2==2.8.6
 pycparser==2.20
 pytz==2021.1
 six==1.15.0
 sqlparse==0.4.1
+whitenoise==5.2.0
